JSW Devsb/src/objects/Settlement__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_committe_Remarks__c</fullName>
        <label>Approval committe Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_committe__c</fullName>
        <label>Approval committe</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approve__c</fullName>
        <label>Approve</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Settlements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Settlements</relationshipLabel>
        <relationshipName>Settlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Settlements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closure_Date__c</fullName>
        <label>Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closure_Remarks__c</fullName>
        <label>Closure Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compensation_Status__c</fullName>
        <label>Compensation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component Type</label>
        <picklist>
            <picklistValues>
                <fullName>Value1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Investigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigation</label>
        <referenceTo>Investigation__c</referenceTo>
        <relationshipLabel>Settlements</relationshipLabel>
        <relationshipName>Settlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Rate__c</fullName>
        <label>Invoice Rate(Rs/MT)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>TEXT( Case__r.Product__c )</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Settlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Date__c</fullName>
        <label>Proposed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity_MT__c</fullName>
        <label>Quantity(MT)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Settlement_Status__c</fullName>
        <label>Settlement Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <formula>IF(Case__r.State__c == &apos;Andhra Pradesh&apos;,&apos;AP&apos;,Case__r.State__c)</formula>
        <label>State Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>committe_Member__c</fullName>
        <label>committe Member</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>is_the_Supply_within_60_days_from_mfg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is the Supply within 60 days from mfg</label>
        <type>Checkbox</type>
    </fields>
    <label>Settlement</label>
    <listViews>
        <fullName>APEX_Settlement</fullName>
        <filterScope>Queue</filterScope>
        <label>APEX</label>
        <queue>APEX</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AP_CCFT_Settlement</fullName>
        <filterScope>Queue</filterScope>
        <label>AP CCFT</label>
        <queue>AP_CCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AP_RCFT_Settlement</fullName>
        <filterScope>Queue</filterScope>
        <label>AP RCFT</label>
        <queue>AP_RCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Kerala_RCFT_Settlement</fullName>
        <filterScope>Queue</filterScope>
        <label>Kerala RCFT</label>
        <queue>Kerala_RCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Kurnool_Team_Settlement</fullName>
        <filterScope>Queue</filterScope>
        <label>Kurnool Team</label>
        <queue>Kurnool_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>South_Karnataka_CCFT_Settlement</fullName>
        <filterScope>Queue</filterScope>
        <label>Karnataka CCFT</label>
        <queue>Karnataka_CCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>South_Karnataka_RCFT_Settlement</fullName>
        <filterScope>Queue</filterScope>
        <label>Karnataka RCFT</label>
        <queue>Karnataka_RCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tamil_Nadu_CCFT_Settlement</fullName>
        <filterScope>Queue</filterScope>
        <label>Tamil Nadu CCFT</label>
        <queue>Tamil_Nadu_CCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tamil_Nadu_RCFT_Settlement</fullName>
        <filterScope>Queue</filterScope>
        <label>Tamil Nadu RCFT</label>
        <queue>Tamil_Nadu_RCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Telangana_CCFT_Settlement</fullName>
        <filterScope>Queue</filterScope>
        <label>Telangana CCFT</label>
        <queue>Telangana_CCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Telangana_RCFT_Settlement</fullName>
        <filterScope>Queue</filterScope>
        <label>Telangana RCFT</label>
        <queue>Telangana_RCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Settlement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Settlements</pluralLabel>
    <recordTypes>
        <fullName>Commercial_Closure</fullName>
        <active>true</active>
        <label>Commercial Closure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Complaint_Closure</fullName>
        <active>true</active>
        <label>Complaint Closure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Settlement</fullName>
        <active>true</active>
        <label>Settlement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>